--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
 matplotlib==3.8.3
 pandas==2.2.1
-streamlit==1.22
-git+https://github.com/streamlit/gsheets-connection
+st-gsheets-connection==0.0.4
